# spark-connect-example

./: .gitignore  Makefile  README.md  databricks-job.json  pyproject.toml  setup_databricks_profile.sh  spark_connect_example.py
dbt_spark_connect_example/: dbt_project.yml
dbt_spark_connect_example/profiles/: profiles.yml.example
